--- a/Neoteric Nighthawks_FinalProject/Neoteric Nighthawks_FinalProject.csproj
+++ b/Neoteric Nighthawks_FinalProject/Neoteric Nighthawks_FinalProject.csproj
@@ -79,6 +79,7 @@
       <DependentUpon>index.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="wolfeaw.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
