--- a/Neoteric Nighthawks_FinalProject/Neoteric Nighthawks_FinalProject.csproj
+++ b/Neoteric Nighthawks_FinalProject/Neoteric Nighthawks_FinalProject.csproj
@@ -78,6 +78,7 @@
     <Compile Include="index.aspx.designer.cs">
       <DependentUpon>index.aspx</DependentUpon>
     </Compile>
+    <Compile Include="patel3jc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
