--- a/Neoteric Nighthawks_FinalProject/Neoteric Nighthawks_FinalProject.csproj
+++ b/Neoteric Nighthawks_FinalProject/Neoteric Nighthawks_FinalProject.csproj
@@ -78,6 +78,9 @@
     <Compile Include="index.aspx.designer.cs">
       <DependentUpon>index.aspx</DependentUpon>
     </Compile>
+    <Compile Include="James2c4.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
